# cn-jobs

./: .env.example  .gitignore  LICENSE  README.md  build_dataset.py  build_site_data.py  industry_metadata.py  pyproject.toml  score_ai_exposure.py  scrape_stats.py
data/: employment_by_industry.csv  industries.json  scores.json  wages_by_industry.csv
raw/: A040601_LAST20.json  A040602_LAST20.json  A040603_LAST20.json  A040604_LAST20.json  A040605_LAST20.json  A040606_LAST20.json  A040607_LAST20.json  A040608_LAST20.json  A040609_LAST20.json  A04060A_LAST20.json  A04060B_LAST20.json  A04060C_LAST20.json  A04060D_LAST20.json  A04060E_LAST20.json  A04060F_LAST20.json  A04060G_LAST20.json  A04060H_LAST20.json  A04060I_LAST20.json  A04060J_LAST20.json  A04060K_LAST20.json  A040I01_LAST20.json  A040I02_LAST20.json  A040I03_LAST20.json  A040I04_LAST20.json  A040I05_LAST20.json  A040I06_LAST20.json  A040I07_LAST20.json  A040I08_LAST20.json  A040I09_LAST20.json  A040I0A_LAST20.json  A040I0B_LAST20.json  A040I0C_LAST20.json  A040I0D_LAST20.json  A040I0E_LAST20.json  A040I0F_LAST20.json  A040I0G_LAST20.json  A040I0H_LAST20.json  A040I0I_LAST20.json  A040I0J_LAST20.json  A040I0K_LAST20.json  (+20 more)
site/: CNAME  data.json  index.html  summary.json
